// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty div 1`] = `
<div
  className=""
/>
`;

exports[`renders an indicator 1`] = `
<div
  className=""
>
  <Animatable(NewActivityIndicator)
    title="blah"
  />
</div>
`;
